--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,6 @@ landform/Assets/Standard Assets
 
 arkit_unity_场景文件解析/场景笔记空模版.docx
 
-unity学习笔记
-
 AmazingRacer/.vs
 AmazingRacer/Logs
 AmazingRacer/Library
@@ -58,3 +56,7 @@ ColliderTest/
 2d_game_project/
 
 InputTest/
+
+3d_animation/
+
+2d_animation/
